@startuml
'https://plantuml.com/class-diagram

skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle

interface Command <<interface>> {
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

class ShowTransactionHistoryCommand {
    - input: String
    - transactionStorage: TransactionStorage
    + ShowTransactionHistoryCommand(input: String)
    + execute(ItemList items, CategoryList categories, Ui ui): void
}

class ShowTransactionHistoryCommandValidator {
    - input: String
    + validate(ItemList items, CategoryList categories): void
}

class TransactionStorage {
    + load(): ArrayList<String>
}

class Ui {
    + showMessage(message: String): void
}

Command <|.. ShowTransactionHistoryCommand

ShowTransactionHistoryCommand ..> ShowTransactionHistoryCommandValidator : <<creates>>
ShowTransactionHistoryCommand ..> TransactionStorage : <<uses>>
ShowTransactionHistoryCommand ..> Ui : <<uses>>

@enduml